# mis-capstone

./: .envrc.example  .gitignore  .gitleaks.toml  .pnp.cjs  .pre-commit-config.yaml  AGENTS.md  CAPSTONE_ARGUMENT.md  CAPSTONE_DEFENSE_DEMO_SCRIPT.md  CAPSTONE_DEMO_RUN.md  CAPSTONE_EVALUATION_METHOD.md  CAPSTONE_EVALUATION_PACKET.md  CAPSTONE_EVALUATION_RESULTS.md  CAPSTONE_EVALUATION_WALKTHROUGH.md  CAPSTONE_NOTES.md  CAPSTONE_PAPER_DRAFT.md  CAPSTONE_PAPER_OUTLINE.md  CAPSTONE_PAPER_REVIEW.md  CAPSTONE_REHEARSAL_NOTES.md  CAPSTONE_RESULTS_DISCUSSION_TEMPLATE.md  DEV_JOURNAL.md  FREEZE_NOTES.md  JIT_PLANNER_UI_SPEC.md  Makefile  README.md  SRS_TRACEABILITY_MATRIX.md  package-lock.json  package.json
api/: manage.py  pyproject.toml
api/api/: settings.py  settings_test.py  urls.py
api/testkit/: __init__.py  urls.py  views.py
api/tutorial/: settings.py
api/tutorial-bad/api/: admin.py
api/tutorial/api/: models.py  utils.py  views.py
api/upoutodo/: RECURRENCE.md  admin.py  apps.py  asgi.py  authentication.py  filters.py  permissions.py  recurrence.py  schema.py  settings.py  signals.py  urls.py  utils.py  wsgi.py
api/upoutodo/api/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  utils.py  views.py
api/upoutodo/api/models/: Project.py  ProjectSection.py  Task.py  UserProfile.py  UserSettings.py
api/upoutodo/api/serializers/: ProjectSectionSerializer.py  ProjectSerializer.py  TaskSerializer.py  UserSerializer.py
api/upoutodo/api/tests/: factories.py  test_signals.py
api/upoutodo/api/tests/endpoints/: test_project_endpoints.py  test_project_section_endpoints.py  test_task_endpoints.py  test_user_endpoints.py
api/upoutodo/api/tests/models/: test_project.py  test_project_section.py  test_task.py
api/upoutodo/api/tests/serializers/: test_project_serializer.py  (+3 more)
api/upoutodo/api/views/: ProjectSectionViewSet.py  ProjectViewSet.py  TaskViewSet.py  UserViewSet.py
api/upoutodo/email/: email_service.py  send_email.py
api/upoutodo/email/templates/: daily_digest.html
api/upoutodo/management/commands/: seed_planner_evaluation_demo.py
api/upoutodo/migrations/: 0001_initial.py  0002_alter_task_options.py  0003_tag_taggeditem_alter_task_tags.py  0004_alter_task_completion_date_alter_task_due_date.py  0005_userprofile_is_admin.py  0006_task_created_at_task_updated_at.py  0007_userprofile_is_onboarded_userprofile_theme.py  0008_add_notification_email.py  0008_add_rrule_field.py  0008_task_dtstart_task_rrule.py  0009_add_recurrence_fields.py  0009_alter_task_anchor_mode_alter_task_dtstart_and_more.py  0009_migrate_due_date_to_rrule.py  0010_add_recurrence_anchor_mode.py  0010_alter_task_anchor_mode_alter_task_description_and_more.py  0010_make_rrule_required.py  0011_add_notification_model_and_email_digest_pref.py  0011_populate_due_date_cache.py  0012_add_timezone_field.py  0012_energycheckin_todayplan_planitem_and_more.py  0013_add_timezone_to_userprofile.py  0013_todayplanfeedback.py
api/upoutodo/models/: Project.py  ProjectSection.py  Task.py  UserProfile.py  __init__.py  notification.py  planner.py  project_section.py  tag.py  task.py  user_profile.py
api/upoutodo/scripts/: tasks.py
api/upoutodo/serializers/: ProjectSectionSerializer.py  ProjectSerializer.py  TaskSerializer.py  UserSerializer.py  __init__.py  comment.py  notification.py  planner.py  project.py  project_section.py  tag.py  task.py  user.py
api/upoutodo/services/: planner.py  planner_tools.py
api/upoutodo/tests/: factories.py  test_anchor_mode.py  test_notifications.py  test_recurrence.py  test_settings_security.py  test_signals.py
api/upoutodo/tests/email/: test_email_service.py  test_send_email.py
api/upoutodo/tests/endpoints/: test_admin.py  test_comment.py  test_e2e_authentication.py  test_email.py  test_planner.py  test_project.py  test_project_endpoints.py  test_project_section.py  test_task.py  test_task_date_filtering.py  test_task_endpoints.py  test_task_rrule.py  test_user.py  test_user_endpoints.py
api/upoutodo/tests/integration/: test_task_workflows.py
api/upoutodo/tests/management/: test_seed_planner_evaluation_demo.py
api/upoutodo/tests/models/: test_project.py  test_project_section.py  test_task.py  test_task_recurrence.py
api/upoutodo/tests/performance/: test_bulk_operations.py
api/upoutodo/tests/serializers/: test_project_section.py  test_project_section_serializer.py  test_project_serializer.py  test_task.py  test_task_rrule.py  test_task_serializer.py  test_user.py  test_user_serializer.py
api/upoutodo/tests/services/: test_planner_tools.py
api/upoutodo/views/: ProjectSectionViewSet.py  ProjectViewSet.py  UserViewSet.py  __init__.py  admin.py  comment.py  email.py  notification.py  planner.py  productivity.py  project.py  project_section.py  recurrence.py  tag.py  task.py  test_auth.py  user.py
tutorial/: pyproject.toml
tutorial/tutorial/: settings.py  urls.py
tutorial/tutorial/quickstart/: serializers.py  views.py
(+739 files in other folders)
