[project]
name = "upoutodo"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
authors = [{ name = "Marco Enrico", email = "mvalviar@gmail.com" }]

dependencies = [
  "django>=5.0.6,<6.0.0",
  "djangorestframework>=3.15.1,<4.0.0",
  "django-cors-headers>=4.3.1,<5.0.0",
  "cryptography>=42.0.8,<43.0.0",
  "drf-jwt>=1.19.2,<2.0.0",
  "requests>=2.32.3,<3.0.0",
  "pyjwt>=2.8.0,<3.0.0",
  "auth0-python>=4.7.1,<5.0.0",
  "django-filter>=24.3,<25.0",
  "django-taggit>=6.1.0,<7.0.0",
  "django-contrib-comments>=2.2.0,<3.0.0",
  "jinja2>=3.1.6,<4.0.0",
  "python-dateutil>=2.8.2,<3.0.0",
]

[dependency-groups]
dev = [
  "pre-commit",
  "pytest",
  "pytest-django",
  "faker",
  "factory-boy",
  "pytest-testmon",
  "pytest-watcher",
  "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
# Matches Black-like defaults; tweak if desired:
# quote-style = "double"
# indent-width = 4

[tool.ruff.lint]
# Core Flake8-like rules + import sorting (isort)
select = ["E4", "E7", "E9", "F"]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["upoutodo"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "api.settings"
testpaths = ["upoutodo/tests"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
